5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1836_1277.log
== SUBMITION (2019-07-01 21:03:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int):
	for i in range(7):
		v[i] = aux
		aux = aux + 111
	
for i in range(7, dtype=int):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- EXECUTION TIME:
0.5269
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 14
    v = zeros(7, dtype=int):
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:03:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int):
	for i in range(7):
		v[i] = aux
		aux = aux + 111
	
for i in range(7, dtype=int):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- ERROR:
File "XXXX", line 14
    v = zeros(7, dtype=int):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:03:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int):
	for i in range(7):
		v[i] = aux
		aux = aux + 111
	
for i in range(7, dtype=int):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- ERROR:
File "XXXX", line 14
    v = zeros(7, dtype=int):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:03:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
	for i in range(7):
		v[i] = aux
		aux = aux + 111
	
for i in range(7, dtype=int):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- EXECUTION TIME:
0.566519
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 15
    for i in range(7):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:03:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
	for i in range(7):
		v[i] = aux
		aux = aux + 111
	
for i in range(7, dtype=int):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- ERROR:
File "XXXX", line 15
    for i in range(7):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:04:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7, dtype=int):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- EXECUTION TIME:
1.13809
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    for i in range(7, dtype=int):
TypeError: range() does not take keyword arguments

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:04:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7, dtype=int):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:04:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:05:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("n: "))
n2 = int(input("n: "))
v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- EXECUTION TIME:
0.863207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 25, in <module>
    print(mat[a,b])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:05:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("n: "))
n2 = int(input("n: "))
v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:05:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("n: "))
n2 = int(input("n: "))
v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(mat[a,b])
	
-- EXECUTION TIME:
0.921256
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 25, in <module>
    print(mat[a,b])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:06:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("n: "))
n2 = int(input("n: "))
v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(v[a,b])
	
-- EXECUTION TIME:
1.19875
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 25, in <module>
    print(v[a,b])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:09:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("n: "))
n2 = int(input("n: "))
v = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(v[a,b])
	
-- EXECUTION TIME:
0.93959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 25, in <module>
    print(v[a,b])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:10:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("n: "))
n2 = int(input("n: "))
vat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
a = 1
b = 0
aux = 111
v = zeros(7, dtype=int)
for i in range(7):
	v[i] = aux
	aux = aux + 111
	
for i in range(7):
	if(n == v[i]):
		a = i
	if(n2 == v[i]):
		b = i
print(vat[a,b])
	
-- EXECUTION TIME:
0.886624
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
